@@ -1,3 +1,7 @@
+Mon Apr  2 13:54:21 2001  Shugo Maeda <shugo@ruby-lang.org>
+
+	* lib/monitor.rb (wait): ensure reentrance.
+
 Mon Apr  2 12:44:53 2001  Shugo Maeda <shugo@ruby-lang.org>
 
 	* lib/net/imap.rb: backport from ruby-1.7.
